--- a/app/views/yandex_music/style.css
+++ b/app/views/yandex_music/style.css
@@ -9,18 +9,20 @@
 }
 
 /* SCROLL BARS */
-*::-webkit-scrollbar {
-    width: var(--ya_border_radius) !important;
+html::-webkit-scrollbar {
+    width: 0 !important;
 }
-
-*::-webkit-scrollbar-track {
-    background-color: inherit !important;
+.sidebar-cont::-webkit-scrollbar {
+    width: 15px !important;
 }
-
-*::-webkit-scrollbar-thumb {
+.sidebar-cont::-webkit-scrollbar-track {
+    background-color: transparent !important;
+}
+.sidebar-cont::-webkit-scrollbar-thumb {
     border-radius: var(--ya_border_radius) !important;
     background: #fcca00 !important;
 }
+/* SCROLL BARS */
 
 .theme-white .rup-settings-context, .theme-white .rup-settings__button .d-button-inner, .theme-white .deco-button-slider-control .deco-button-stylable {
     border: 2px solid !important;
@@ -111,7 +113,7 @@
     backdrop-filter: var(--ya_blur) !important;
 }
 
-.d-share .ya-share2__container_size_M .ya-share2__item .ya-share2__badge, .d-button_size_S.d-button-inner, .d-button_size_S .d-button-inner, .popup, .page-main__clips-button .d-button-inner, .d-share-popup .share_hover.d-button, .d-like_theme-hover .d-button, .button_round, .button2_rounded, .d-track_with-cover .d-track__play, .d-track_selectable:hover:after, .d-hover__overlap, .playlist .d-hover, .playlist__cover, .playlist-cover__mosaic, video, figure, img, .teaser__content, .rup-settings-context, .d-button_rounded.d-button-inner, .d-button_rounded .d-button-inner, .entity-cover.deco-entity-image-placeholder.track-cover.entity-cover_size_Large, .d-cover__wrapper.playlist-cover__wrapper, .playlist-cover__mosaic, .playlist_selectable.playlist::before {
+.d-share .ya-share2__container_size_M .ya-share2__item .ya-share2__badge, .d-button_size_S.d-button-inner, .d-button_size_S .d-button-inner, .popup, .page-main__clips-button .d-button-inner, .d-share-popup .share_hover.d-button, .d-like_theme-hover .d-button, .button_round, .button2_rounded, .d-track_with-cover .d-track__play, .d-track_selectable:hover:after, .d-hover__overlap, .playlist .d-hover, .playlist__cover, .playlist-cover__mosaic, video, figure, img, .teaser__content, .rup-settings-context, .d-button_rounded.d-button-inner, .d-button_rounded .d-button-inner, .entity-cover.deco-entity-image-placeholder.track-cover.entity-cover_size_Large, .d-cover__wrapper.playlist-cover__wrapper, .playlist-cover__mosaic, .playlist_selectable.playlist::before, .artist__content:hover:before, .album_selectable.album:hover:before {
     border-radius: var(--ya_border_radius) !important
 }
 
