--- a/app/views/yandex_music/style.css
+++ b/app/views/yandex_music/style.css
@@ -143,9 +143,9 @@
 }
 
 .head-kids__nav {
-    margin-left: 0;
+    margin-left: 0 !important;
 }
 
 .head-kids .nav-kids__tab, .head-kids .nav-kids__tab:first-child {
-    margin-left: 30px;
+    margin-left: 30px !important;
 }
