--- a/app/views/yandex_music/style.css
+++ b/app/views/yandex_music/style.css
@@ -124,7 +124,7 @@
     border-radius: var(--ya_border_radius) !important
 }
 
-.rup__animation, .page-users .d-generic-page-head__aside {
+.rup__animation, .page-users .d-generic-page-head__aside, .head-kids__left, .footer {
     display: none !important
 }
 
@@ -148,4 +148,28 @@
 
 .head-kids .nav-kids__tab, .head-kids .nav-kids__tab:first-child {
     margin-left: 30px !important;
+}
+
+.centerblock {
+    padding: 30px 30px 15px !important;
+}
+
+.d-generic-page-head {
+    min-height: auto !important;
+}
+
+.d-generic-page-head__main {
+    flex-direction: row !important;
+    justify-content: center !important;
+}
+
+.d-generic-page-head__main-actions, .d-generic-page-head__main-side-actions {
+    flex: 0 !important;
+    display: flex !important;
+    min-width: auto !important;
+}
+
+.d-generic-page-head__main-bottom {
+    justify-content: right !important;
+    align-items: center !important;
 }
