--- a/app/views/player/elements/player_elements.css
+++ b/app/views/player/elements/player_elements.css
@@ -60,8 +60,8 @@
     justify-content: center;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
-    margin: 0;
-    padding: 0;
+    margin: 39px 0 0;
+    padding: 6px 0 0;
 }
 
 .test_track_list_main_block  chui_playlist_list{
@@ -76,4 +76,12 @@
 #test_dialog_pl_list_title {
     border-radius: var(--border_radius);
     padding: 5px;
+}
+
+.test_track_list_main_block2 {
+    height: max-content;
+    width: -webkit-fill-available;
+    position: absolute;
+    top: 0;
+    z-index: 100;
 }
